--- a/_config.yml
+++ b/_config.yml
@@ -125,7 +125,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "https://catatafish132.github.io/Website"
 
 # ------------ The following options are not recommended to be modified ------------------
 
