--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # used by seo meta and the atom feed
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
 # url: "https://catatafish.xyz"
-url: "https://catatafish132.github.io/Website"
+url: "https://catatafish132.xyz"
 github:
   username: CatataFish132 # change to your github username
 
@@ -125,7 +125,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "https://catatafish132.github.io/Website"
+baseurl: "https://catatafish132.xyz"
 
 # ------------ The following options are not recommended to be modified ------------------
 
